fixed the mis alignment of groups on homepage - mobile view

--- a/ckanext/justicehub_theme/public/jh_home_new1.css
+++ b/ckanext/justicehub_theme/public/jh_home_new1.css
@@ -367,6 +367,7 @@ li.dropdown:focus {
 .category-item p {
   margin-bottom: 0;
   margin-left: 12px;
+  min-height: 60px;
 }
 
 .category-item .icon-container {
